logs/to_posgrest_v2/insert_data_to_postgres/2023-03-20T12:36:54.160029+00:00/8.log
[2023-03-20 13:03:49,233] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: to_posgrest_v2.insert_data_to_postgres manual__2023-03-20T12:36:54.160029+00:00 [queued]>
[2023-03-20 13:03:49,275] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: to_posgrest_v2.insert_data_to_postgres manual__2023-03-20T12:36:54.160029+00:00 [queued]>
[2023-03-20 13:03:49,276] {taskinstance.py:1238} INFO - 
--------------------------------------------------------------------------------
[2023-03-20 13:03:49,277] {taskinstance.py:1239} INFO - Starting attempt 8 of 8
[2023-03-20 13:03:49,277] {taskinstance.py:1240} INFO - 
--------------------------------------------------------------------------------
[2023-03-20 13:03:49,315] {taskinstance.py:1259} INFO - Executing <Task(PostgresOperator): insert_data_to_postgres> on 2023-03-20 12:36:54.160029+00:00
[2023-03-20 13:03:49,321] {standard_task_runner.py:52} INFO - Started process 4336 to run task
[2023-03-20 13:03:49,328] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'to_posgrest_v2', 'insert_data_to_postgres', 'manual__2023-03-20T12:36:54.160029+00:00', '--job-id', '18', '--raw', '--subdir', 'DAGS_FOLDER/to_postgresql.py', '--cfg-path', '/tmp/tmpzslq0m8u', '--error-file', '/tmp/tmp17zyj_gg']
[2023-03-20 13:03:49,330] {standard_task_runner.py:77} INFO - Job 18: Subtask insert_data_to_postgres
[2023-03-20 13:03:49,640] {logging_mixin.py:109} INFO - Running <TaskInstance: to_posgrest_v2.insert_data_to_postgres manual__2023-03-20T12:36:54.160029+00:00 [running]> on host 0b4cdb459521
[2023-03-20 13:03:49,973] {taskinstance.py:1426} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=sakabuana31
AIRFLOW_CTX_DAG_ID=to_posgrest_v2
AIRFLOW_CTX_TASK_ID=insert_data_to_postgres
AIRFLOW_CTX_EXECUTION_DATE=2023-03-20T12:36:54.160029+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-03-20T12:36:54.160029+00:00
[2023-03-20 13:03:50,052] {base.py:79} INFO - Using connection to: id: postgres_localhost. Host: host.docker.internal, Port: 5432, Schema: final, Login: ***, Password: ***, extra: {}
[2023-03-20 13:03:50,133] {dbapi.py:225} INFO - Running statement: 
            COPY temperature FROM '/opt/***/data/output-csv/dataclean-temperature-lasvegas.csv' DELIMITER ',' CSV HEADER
            ON CONFLICT (date) DO NOTHING;
        , parameters: None
[2023-03-20 13:03:50,140] {taskinstance.py:1700} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "ON"
LINE 3:             ON CONFLICT (date) DO NOTHING;
                    ^

[2023-03-20 13:03:50,245] {taskinstance.py:1277} INFO - Marking task as FAILED. dag_id=to_posgrest_v2, task_id=insert_data_to_postgres, execution_date=20230320T123654, start_date=20230320T130349, end_date=20230320T130350
[2023-03-20 13:03:50,338] {standard_task_runner.py:92} ERROR - Failed to execute job 18 for task insert_data_to_postgres
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 298, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "ON"
LINE 3:             ON CONFLICT (date) DO NOTHING;
                    ^

[2023-03-20 13:03:50,373] {local_task_job.py:154} INFO - Task exited with return code 1
[2023-03-20 13:03:50,598] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
